--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -1,4 +1,4 @@
-﻿---
+---
 ---
 
 @import url("https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@500;600;700&family=Source+Sans+3:wght@400;500;600&display=swap");
